Attempted (and failed) to resolve the panning issue
	After converting to the DBC package for nicer default
	formatting, the cytoscape component stopped properly
	zooming/centering on the network (which it did by
	default before - with a nice zoom and center panning).

	Since then I've had to hard-code zooming and panning
	behavior. That does not play nicely with other elements
	of the layout, because the network display no longer
	dynamically resizes. (Eg: making screen smaller forced part
	of the kinase map off screen, because it was too large
	to fit).

	I wasn't able to solve this issue at its core. There
	is probably some CSS/js styling conflicts between
	cytoscape/DBC/Dash defaults. I don't know enough JS
	to fix this myself.

	I introduced a work around:

	1. Spun off non-network component (layout selector, and z-score
	   table) into their own divs, so they can size dynamically
	   with the rest of the app.
        2. Hard coded size of the network area, but wrapped it in a
           upper level container that forces the network component
           to always center. Even if it goes off screen, it will
           remained centered nowl
	3. Turned off the border of the hard-coded network component
           (because it goes off screen and looks ugly). Replaced it
           with a pair of Hr elements to bracket the display.

	The network now looks sort of acceptable on smaller screens
	(where there are no elements obviously off-screen.).

	But not a great solution.

--- a/assets/style.css
+++ b/assets/style.css
@@ -74,7 +74,7 @@ Summary {
 }
 
 #kin-map-container {
-    display: grid;
+    display: flex;
     justify-content: center;
 }
 
